# text-adventure

./: .gitignore  LICENSE  adventure.cabal  flake.nix
src/: Commands.hs  GameState.hs  Items.hs  Main.hs  Ollama.hs  Parser.hs  Rooms.hs  Types.hs
src/Game/: Actions.hs  Initial.hs  Monad.hs  State.hs
